--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
 
   </div>
   <script src="js/main.js"></script>
+  <script>
+  	// From https://tympanus.net/codrops/2016/04/26/the-aviator-animating-basic-3d-scene-threejs/
+  	console.log('Thanks Karim Maaloul.');
+  	console.log('https://tympanus.net/codrops/2016/04/26/the-aviator-animating-basic-3d-scene-threejs/');
+  </script>
 </body>
 </html>
