--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
 	<title>test</title>
 	<link href="http://vjs.zencdn.net/4.12/video-js.css" rel="stylesheet">
 	<script src="http://vjs.zencdn.net/4.12/video.js"></script>
+	<style>
+		* {
+			margin: 0;
+			padding: 0;
+		}
+		#videotest {
+			width: 100%;
+		}
+	</style>
 </head>
 <body>
-	<video id="videotest" playsinline webkit-playsinline autoplay>
+	<video id="videotest" playsinline webkit-playsinline autoplay controls>
 		<source src="./123.mp4" type="video/mp4" />
 	</video>
 </body>
