--- a/index.html
+++ b/index.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-	<meta name="apple-mobile-web-app-capable" content="yes">
-	<title>test</title>
-	<link href="http://vjs.zencdn.net/4.12/video-js.css" rel="stylesheet">
-	<script src="http://vjs.zencdn.net/4.12/video.js"></script>
-	<style>
-		* {
-			margin: 0;
-			padding: 0;
-		}
-		#videotest {
-			width: 100%;
-		}
-	</style>
-</head>
-<body>
-	<video id="videotest" playsinline webkit-playsinline autoplay controls>
-		<source src="./123.mp4" type="video/mp4" />
-	</video>
-</body>
-<script type="text/javascript">
-    document.addEventListener("WeixinJSBridgeReady", function (){ 
-    video.play();
-    video.pause();
-}, false)
-</script>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>视频</title><link href=/static/css/app.3f65a11d2358d385bd20729a1095e832.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.1748317793fd05195ff8.js></script><script type=text/javascript src=/static/js/app.cb4155c4888677f219e4.js></script></body></html>
